Added endpoint for top5ViewedProducts
