# analytics-api/src/main/java/com/example/eventstream/model/ProductViewCount.java
@@ -1,0 +1,13 @@
+package com.example.eventstream.model;
+
+import org.springframework.data.mongodb.core.mapping.Field;
+
+import lombok.Data;
+
+@Data
+public class ProductViewCount {
+  @Field("_id")
+  private String productId;
+  private String productName;
+  private int viewCount;
+}
